--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <p>
-        logo Studio
-    </p>
+    <header>
+        <a alt="Web Studio logo">
+        </a>
+    </header>
+        <main>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+
+        </main>
+        <footer></footer>
 </body>
 </html>
