--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-        <a alt="Web Studio logo">
-        </a>
+      <a href="">
+        <img src="./images/header/Logo.svg" alt=" WebStudio logo">
+      </a>
     </header>
         <main>
             <section></section>
