--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 <body>
     <header>
       <a href="">
-        <img src="./images/header/Logo.svg" alt=" WebStudio logo">
+        <img src="./images/header/Logo.svg" alt="WebStudio logo" width="24" height="24"/>
       </a>
+      <nav>
+        <ul>
+            <li>
+                <a href="">Studio</a>
+            </li>
+            <li>
+                <a href="">Portfolio</a>
+            </li>
+            <li>
+                <a href="">Contacts</a>
+            </li>
+        </ul>
+      </nav>
     </header>
         <main>
             <section></section>
