--- a/index.html
+++ b/index.html
@@ -14,25 +14,33 @@
       <nav>
         <ul>
             <li>
-                <a href="">Studio</a>
+                <a href="#Studio">Studio</a>
             </li>
             <li>
-                <a href="">Portfolio</a>
+                <a href="#Portfolio">Portfolio</a>
             </li>
             <li>
-                <a href="">Contacts</a>
+                <a href="#Contacts">Contacts</a>
             </li>
         </ul>
       </nav>
+
     </header>
         <main>
+            <!-- hero image -->
             <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
+            <!-- section1 -->
+            <section id="Studio"></section>
+            <!-- section2 -->
+            <section id="Portfolio"></section>
+            section3
+            <!-- section3 -->
+            <section id="Contacts"></section>
+            <!-- futer -->
             <section></section>
 
         </main>
         <footer></footer>
+    
 </body>
 </html>
