--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </li>
         </ul>
       </nav>
+      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
 
     </header>
         <main>
@@ -33,7 +34,7 @@
             <section id="Studio"></section>
             <!-- section2 -->
             <section id="Portfolio"></section>
-            section3
+
             <!-- section3 -->
             <section id="Contacts"></section>
             <!-- futer -->
