--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
             </li>
         </ul>
       </nav>
+      
       <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <a href="emeil:info@devstudio.com">info@devstudio.com</a>
 
     </header>
         <main>
             <!-- hero image -->
             <section></section>
             <!-- section1 -->
-            <section id="Studio"></section>
+            <section id="Studio">Effective Solutions
+                for Your Business</section>
             <!-- section2 -->
             <section id="Portfolio"></section>
 
