--- a/index.html
+++ b/index.html
@@ -24,17 +24,26 @@
             </li>
         </ul>
       </nav>
-      
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      <a href="emeil:info@devstudio.com">info@devstudio.com</a>
+     <ul>
+        <li>
+            <a href="emeil:info@devstudio.com">info@devstudio.com</a>
+        <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+         <li>
+      </ul>
 
+     <h1>Effective Solutions for Your Business</h1>
+<ul>
+    <li>
+        <button tupe="button">Order Service</button>
+    </li>
+</ul>
     </header>
         <main>
             <!-- hero image -->
             <section></section>
             <!-- section1 -->
-            <section id="Studio">Effective Solutions
-                for Your Business</section>
+            <section id="Studio"></section>
             <!-- section2 -->
             <section id="Portfolio"></section>
 
