--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <header>
-      <a href="">
-        <img src="./images/header/Logo.svg" alt="WebStudio logo" width="24" height="24"/>
-      </a>
+      <a href="">Web<span>Studio</span></a>
       <nav>
         <ul>
             <li>
@@ -33,17 +31,38 @@
       </ul>
 
      <h1>Effective Solutions for Your Business</h1>
-<ul>
-    <li>
-        <button tupe="button">Order Service</button>
-    </li>
-</ul>
+
+         <button type="button">Order Service</button>  
+   
     </header>
         <main>
             <!-- hero image -->
             <section></section>
             <!-- section1 -->
-            <section id="Studio"></section>
+
+            <section id="Studio">
+            <ul>
+                <li> 
+                    <h2>Strategy</h2>
+                    <p>Our goal is to identify the business
+                       problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h2>Diligence</h2>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+             
+            </section>
+
             <!-- section2 -->
             <section id="Portfolio"></section>
 
