--- a/index.html
+++ b/index.html
@@ -64,10 +64,50 @@
             </section>
 
             <!-- section2 -->
-            <section id="Portfolio"></section>
+            <section id="Portfolio">
+                <h2>What are we doing</h2>
+                <ul>
+                    <li>
+                        <img src="./images/img1/Rectangle 71.png" alt="width360">
+                    </li>
+                    <li>
+                        <img src="./images/img2/img 2.png" alt="width360">
+                    </li>
+                    <li>
+                        <img src="./images/img3/img 3.png" alt="width360">
+                    </li>
+                 </ul>
+            </section>
 
             <!-- section3 -->
             <section id="Contacts"></section>
+            <h2>Our Team</h2>
+        <ul>
+            <li>
+                 <img src="./images/img4/img.png" alt="width264">
+                 <h3>Mark Guerrero</h3>
+                 <p>Product Designer</p>
+            </li>
+
+            <li>
+                 <img src="./images/img Tom Ford2/Tom Ford.png" alt="width264">
+                 <h3>Tom Ford</h3>
+                 <p>Frontend Developer</p>
+            </li>
+
+            <li>
+                 <img src="./images/img Camila Garcia/Camila Garcia.png" alt="width264">
+                 <h3>Camila Garcia</h3>
+                 <p>Marketing</p>
+            </li>
+
+            <li>
+                 <img src="./images/img Daniel Wilson/Daniel Wilson.png" alt="width264">
+                 <h3>Daniel Wilson</h3>
+                 <p>UI Designer</p>
+            </li>
+
+        </ul>
             <!-- futer -->
             <section></section>
 
