--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/img1/Rectangle 71.png" alt="width360">
+                        <img src="./images/img1/img1.svg" alt="width360">
                     </li>
                     <li>
-                        <img src="./images/img2/img 2.png" alt="width360">
+                        <img src="./images/img2/img2.svg" alt="width360">
                     </li>
                     <li>
-                        <img src="./images/img3/img 3.png" alt="width360">
+                        <img src="./images/img3/img3.svg" alt="width360">
                     </li>
                  </ul>
             </section>
@@ -84,25 +84,25 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/img4/img.png" alt="width264">
+                 <img src="./images/img4/img.svg" alt="width264">
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
             </li>
 
             <li>
-                 <img src="./images/img Tom Ford2/Tom Ford.png" alt="width264">
+                 <img src="./images/imgTomFord2/TomFord.svg" alt="width264">
                  <h3>Tom Ford</h3>
                  <p>Frontend Developer</p>
             </li>
 
             <li>
-                 <img src="./images/img Camila Garcia/Camila Garcia.png" alt="width264">
+                 <img src="./images/imgCamilaGarcia/CamilaGarcia.svg" alt="width264">
                  <h3>Camila Garcia</h3>
                  <p>Marketing</p>
             </li>
 
             <li>
-                 <img src="./images/img Daniel Wilson/Daniel Wilson.png" alt="width264">
+                 <img src="./images/imgDanielWilson/DanielWilson.svg" alt="width264">
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p>
             </li>
@@ -112,7 +112,14 @@
             <section></section>
 
         </main>
-        <footer></footer>
+        <!--Футер-->
+        <footer>
+            <a href="">Web<span>Studio</span></a>
+            <p>
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+
+        </footer>
     
 </body>
 </html>
