--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
          <li>
       </ul>
 
-     <h1>Effective Solutions for Your Business</h1>
-
-         <button type="button">Order Service</button>  
-   
     </header>
         <main>
             <!-- hero image -->
-            <section></section>
+            <section>
+                <h1>Effective Solutions for Your Business</h1>
+
+                <button type="button">Order Service</button>  
+   
+            </section>
             <!-- section1 -->
 
             <section id="Studio">
