--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-      <a href="">Web<span>Studio</span></a>
+      <a href=""><span>WebStudio</span></a>
       <nav>
         <ul>
             <li>
@@ -115,7 +115,7 @@
         </main>
         <!--Футер-->
         <footer>
-            <a href="">Web<span>Studio</span></a>
+            <a href=""><span>WebStudio</span></a>
             <p>
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
