--- a/index.html
+++ b/index.html
@@ -9,19 +9,7 @@
 <body>
     <header>
       <nav>
-    <ul>
-        <li>
-            <a href=""><span>WebStudio</span></a>
-        </li>
-        <li>
-            <a href="emeil:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-    </ul>
-    
+        <a href="">WebStudio</a>
         <ul>
             <li>
                 <a href="#Studio">Studio</a>
@@ -31,6 +19,15 @@
             </li>
             <li>
                 <a href="#Contacts">Contacts</a>
+            </li>
+        </ul>
+        <ul>
+            <li>
+                <a href="emeil:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+    
+                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
       </nav>
