--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
                 <a href="#Contacts">Contacts</a>
             </li>
         </ul>
-        <ul>
-            <li>
-                <a href="emeil:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-    
-                <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-            </li>
-        </ul>
+        
+        <address>
+            <a href="emeil:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </address>
+
       </nav>
 
     </header>
