--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <a href="#Contacts">Contacts</a>
             </li>
         </ul>
-        
+
         <address>
-            <a href="emeil:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
         </address>
 
