--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
     <header>
       <nav>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-            <li>
-                <a href="#Studio">Studio</a>
-            </li>
+            <li> <a href="#Studio">Studio</a> </li>
             <li>
                 <a href="#Portfolio">Portfolio</a>
             </li>
@@ -22,7 +20,7 @@
             </li>
         </ul>
       </nav>
-      
+
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -111,7 +109,7 @@
         </main>
         <!--Футер-->
         <footer>
-            <a href=""><span>WebStudio</span></a>
+            <a href="./index.html">WebStudio</a>
             <p>
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
