--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./WebStudio">WebStudio</a>
         <ul>
             <li> <a href="#Studio">Studio</a> </li>
             <li>
