--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 <body>
     <header>
       <nav>
-        <a href=".#WebStudio">WebStudio</a>
+        <a href="/WebStudio">WebStudio</a>
         <ul>
-            <li> <a href="#Studio">Studio</a> </li>
-            <li>
-                <a href="#Portfolio">Portfolio</a>
+            <li> 
+                <a href="/Studio">Studio</a>
             </li>
             <li>
-                <a href="#Contacts">Contacts</a>
+                <a href="/Portfolio">Portfolio</a>
+            </li>
+            <li>
+                <a href="/Contacts">Contacts</a>
             </li>
         </ul>
       </nav>
@@ -62,7 +64,7 @@
 
             <!-- section2 -->
             <section id="Portfolio">
-                <h3>What are we doing</h3>
+                <h2>What are we doing</h2>
                 <ul>
                     <li>
                         <img src="./images/img1/img1.svg" alt="width360">
