--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <header>
       <nav>
-        <a href="/WebStudio">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li> 
-                <a href="/Studio">Studio</a>
+                <a href="Studio">Studio</a>
             </li>
             <li>
-                <a href="/Portfolio">Portfolio</a>
+                <a href="Portfolio">Portfolio</a>
             </li>
             <li>
-                <a href="/Contacts">Contacts</a>
+                <a href="Contacts">Contacts</a>
             </li>
         </ul>
       </nav>
