--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             </li>
         </ul>
       </nav>
-
       <address>
      <ul>
         <li>
@@ -70,16 +69,16 @@
 
             <!-- section2 -->
             <section id="Portfolio">
-                <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/img1/img1.svg" alt="width360">
+                        <h2>What are we doing</h2>
+                        <img src="./images/img1/img 1.jpg" alt="width360">
                     </li>
                     <li>
-                        <img src="./images/img2/img2.svg" alt="width360">
+                        <img src="./images/img1/img 2.jpg" alt="width360">
                     </li>
                     <li>
-                        <img src="./images/img3/img3.svg" alt="width360">
+                        <img src="./images/img1/img 3.jpg" alt="width360">
                     </li>
                  </ul>
             </section>
@@ -89,25 +88,25 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/img4/img.svg" alt="width264">
+                 <img src="./images/img1/MarkGuerrero.jpg" alt="width264">
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
             </li>
 
             <li>
-                 <img src="./images/imgTomFord2/TomFord.svg" alt="width264">
+                 <img src="./images/img1/TomFord.jpg" alt="width264">
                  <h3>Tom Ford</h3>
                  <p>Frontend Developer</p>
             </li>
 
             <li>
-                 <img src="./images/imgCamilaGarcia/CamilaGarcia.svg" alt="width264">
+                 <img src="./images/img1/CamilaGarcia.jpg" alt="width264">
                  <h3>Camila Garcia</h3>
                  <p>Marketing</p>
             </li>
 
             <li>
-                 <img src="./images/imgDanielWilson/DanielWilson.svg" alt="width264">
+                 <img src="./images/img1/DanielWilson.jpg" alt="width264">
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p>
             </li>
