--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
       <nav>
-        <a  href=”./index.html”>WebStudio</a>
+        <a  href=”./index.html”>webStudio</a>
         <ul>
             <li> 
                 <a href=””>Studio</a>
@@ -85,7 +85,7 @@
             </section>
 
             <!-- section4 -->
-            <section id="Contacts"></section>
+            <section id="Contacts">
             <h2>Our Team</h2>
         <ul>
             <li>
@@ -113,7 +113,7 @@
             </li>
 
         </ul>
-
+          </section>
         </main>
         <!--Футер-->
         <footer>
