--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
       <nav>
-        <a  href=”./index.html”>webStudio</a>
+        <a  href=”./index.html”>webstudio</a>
         <ul>
             <li> 
                 <a href=””>Studio</a>
