--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <a href="index.html">WebStudio</a>
         <ul>
             <li> 
-                <a href=””>Studio</a>
+                <a href="">Studio</a>
             </li>
             <li>
-                <a href=””>Portfolio</a>
+                <a href="">Portfolio</a>
             </li>
             <li>
-                <a href=””>Contacts</a>
+                <a href="">Contacts</a>
             </li>
         </ul>
       </nav>
@@ -89,25 +89,25 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/img1/markguerrero.jpg" alt="width264">
+                 <img src="./images/img1/markguerrero.jpg" width="width264">
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
             </li>
 
             <li>
-                 <img src="./images/img1/tomford.jpg" alt="width264">
+                 <img src="./images/img1/tomford.jpg" width="width264">
                  <h3>Tom Ford</h3>
                  <p>Frontend Developer</p>
             </li>
 
             <li>
-                 <img src="./images/img1/camilagarcia.jpg" alt="width264">
+                 <img src="./images/img1/camilagarcia.jpg" width="width264">
                  <h3>Camila Garcia</h3>
                  <p>Marketing</p>
             </li>
 
             <li>
-                 <img src="./images/img1/danielwilson.jpg" alt="width264">
+                 <img src="./images/img1/danielwilson.jpg" width="width264">
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p>
             </li>
