--- a/index.html
+++ b/index.html
@@ -89,25 +89,33 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/img1/markguerrero.jpg" width="width264">
+                 <img src="./images/img1/markguerrero.jpg" 
+                 alt=""
+                 width="264">
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
             </li>
 
             <li>
-                 <img src="./images/img1/tomford.jpg" width="width264">
+                 <img src="./images/img1/tomford.jpg" 
+                 alt=""
+                 width="264">
                  <h3>Tom Ford</h3>
                  <p>Frontend Developer</p>
             </li>
 
             <li>
-                 <img src="./images/img1/camilagarcia.jpg" width="width264">
+                 <img src="./images/img1/camilagarcia.jpg" 
+                 alt=""
+                 width="264">
                  <h3>Camila Garcia</h3>
                  <p>Marketing</p>
             </li>
 
             <li>
-                 <img src="./images/img1/danielwilson.jpg" width="width264">
+                 <img src="./images/img1/danielwilson.jpg" 
+                 alt=""
+                 width="264">
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p>
             </li>
