--- a/index.html
+++ b/index.html
@@ -73,13 +73,19 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/img1/img1.jpg" alt="width360">
+                        <img src="./images/img1/img1.jpg" 
+                        alt="" 
+                        width="360">
                     </li>
                     <li>
-                        <img src="./images/img1/img2.jpg" alt="width360">
+                        <img src="./images/img1/img2.jpg" 
+                        alt=""
+                        width="360">
                     </li>
                     <li>
-                        <img src="./images/img1/img3.jpg" alt="width360">
+                        <img src="./images/img1/img3.jpg" 
+                        alt=""
+                        width="360">
                     </li>
                  </ul>
             </section>
