--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/img1/img1.jpg" alt="" width="360">
+                        <img src="./images/img1/img1.jpg" alt="" width="360"/>
                     </li>
                     <li>
-                        <img src="./images/img1/img2.jpg" alt="" width="360">
+                        <img src="./images/img1/img2.jpg" alt="" width="360"/>
                     </li>
                     <li>
-                        <img src="./images/img1/img3.jpg" alt="" width="360">
+                        <img src="./images/img1/img3.jpg" alt="" width="360"/>
                     </li>
                  </ul>
             </section>
@@ -89,7 +89,7 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/img1/markguerrero.jpg"  alt=""width="264">
+                 <img src="./images/img1/markguerrero.jpg" alt=""width="264">
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
             </li>
