--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                         <img src="./images/img1/img1.jpg" alt="img1" width="360" />
                     </li>
                     <li>
-                        <img src="./images/img1/img2.jpg" alt="" width="360" />
+                        <img src="./images/img1/img2.jpg" alt="img1" width="360" />
                     </li>
                     <li>
-                        <img src="./images/img1/img3.jpg" alt="" width="360" />
+                        <img src="./images/img1/img3.jpg" alt="img1" width="360" />
                     </li>
                  </ul>
             </section>
