--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                         <img src="./images/img1/img1.jpg" alt="img1" width="360" />
                     </li>
                     <li>
-                        <img src="./images/img1/img2.jpg" alt="img1" width="360" />
+                        <img src="./images/img1/img2.jpg" alt="img2" width="360" />
                     </li>
                     <li>
-                        <img src="./images/img1/img3.jpg" alt="img1" width="360" />
+                        <img src="./images/img1/img3.jpg" alt="img3" width="360" />
                     </li>
                  </ul>
             </section>
@@ -89,25 +89,25 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/img1/markguerrero.jpg" alt=""width="264" />
+                 <img src="./images/img1/markguerrero.jpg" alt="markguerrero"width="264" />
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
             </li>
 
             <li>
-                 <img src="./images/img1/tomford.jpg" alt=""width="264" />
+                 <img src="./images/img1/tomford.jpg" alt="tomford"width="264" />
                  <h3>Tom Ford</h3>
                  <p>Frontend Developer</p>
             </li>
 
             <li>
-                 <img src="./images/img1/camilagarcia.jpg" alt=""width="264" />
+                 <img src="./images/img1/camilagarcia.jpg" alt="camilagarcia"width="264" />
                  <h3>Camila Garcia</h3>
                  <p>Marketing</p>
             </li>
 
             <li>
-                 <img src="./images/img1/danielwilson.jpg" alt=""width="264" />
+                 <img src="./images/img1/danielwilson.jpg" alt="danielwilson"width="264" />
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p>
             </li>
