--- a/index.html
+++ b/index.html
@@ -73,13 +73,19 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/img 1.jpg" alt="img1" width="360" />
+                        <img src="./images/img 1.jpg" 
+                        alt="img1" 
+                        width="360" />
                     </li>
                     <li>
-                        <img src="./images/img 2.jpg" alt="img2" width="360" />
+                        <img src="./images/img 2.jpg" 
+                        alt="img2"
+                        width="360" />
                     </li>
                     <li>
-                        <img src="./images/img 3.jpg" alt="img3" width="360" />
+                        <img src="./images/img 3.jpg" 
+                        alt="img3" 
+                        width="360" />
                     </li>
                  </ul>
             </section>
@@ -89,25 +95,33 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/markguerrero.jpg" alt="markguerrero"width="264" />
+                 <img src="./images/markguerrero.jpg" 
+                 alt="markguerrero"
+                 width="264" />
                  <h3>Mark Guerrero</h3>
                  <p>Product Designer</p>
             </li>
 
             <li>
-                 <img src="./images/tomford.jpg" alt="tomford"width="264" />
+                 <img src="./images/tomford.jpg" 
+                 alt="tomford"
+                 width="264" />
                  <h3>Tom Ford</h3>
                  <p>Frontend Developer</p>
             </li>
 
             <li>
-                 <img src="./images/camilagarcia.jpg" alt="camilagarcia"width="264" />
+                 <img src="./images/camilagarcia.jpg" 
+                 alt="camilagarcia"
+                 width="264" />
                  <h3>Camila Garcia</h3>
                  <p>Marketing</p>
             </li>
 
             <li>
-                 <img src="./images/danielwilson.jpg" alt="danielwilson"width="264" />
+                 <img src="./images/danielwilson.jpg" 
+                 alt="danielwilson"
+                 width="264" />
                  <h3>Daniel Wilson</h3>
                  <p>UI Designer</p>
             </li>
