--- a/index.html
+++ b/index.html
@@ -73,19 +73,13 @@
                 <h2>What are we doing</h2>
                 <ul>
                     <li>
-                        <img src="./images/img 1.jpg" 
-                        alt="img1" 
-                        width="360">
+                        <img src="./images/img1.jpg" alt="img1" width="360">
                     </li>
                     <li>
-                        <img src="./images/img 2.jpg" 
-                        alt="img2"
-                        width="360">
+                        <img src="./images/img2.jpg" alt="img2" width="360">
                     </li>
                     <li>
-                        <img src="./images/img 3.jpg" 
-                        alt="img3" 
-                        width="360">
+                        <img src="./images/img3.jpg" alt="img3" width="360">
                     </li>
                  </ul>
             </section>
@@ -95,7 +89,7 @@
             <h2>Our Team</h2>
         <ul>
             <li>
-                 <img src="./images/markguerrero.jpg" 
+                 <img src="./images/markguerrero.jpg"
                  alt="markguerrero"
                  width="264">
                  <h3>Mark Guerrero</h3>
@@ -103,7 +97,7 @@
             </li>
 
             <li>
-                 <img src="./images/tomford.jpg" 
+                 <img src="./images/tomford.jpg"
                  alt="tomford"
                  width="264">
                  <h3>Tom Ford</h3>
@@ -111,7 +105,7 @@
             </li>
 
             <li>
-                 <img src="./images/camilagarcia.jpg" 
+                 <img src="./images/camilagarcia.jpg"
                  alt="camilagarcia"
                  width="264">
                  <h3>Camila Garcia</h3>
@@ -119,7 +113,7 @@
             </li>
 
             <li>
-                 <img src="./images/danielwilson.jpg" 
+                 <img src="./images/danielwilson.jpg"
                  alt="danielwilson"
                  width="264">
                  <h3>Daniel Wilson</h3>
